--- a/example/public/index.html
+++ b/example/public/index.html
@@ -10,6 +10,12 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <style rel="stylesheet" type="text/css">
       html {background-color: #f5f5f5}
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: "Open Sans", sans-serif;
+      }
+
     </style>
 
     <title>Pearson Material UI Theme</title>
