--- a/example/public/index.html
+++ b/example/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default"></script>
-
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <style rel="stylesheet" type="text/css">
       html {background-color: #f5f5f5}
