Added Selectable Cards

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -13,11 +13,12 @@
       body {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
         font-family: "Open Sans", sans-serif;
       }
 
     </style>
-
+    <!-- jss-insertion-point -->
     <title>Pearson Material UI Theme</title>
   </head>
 
