Upgraded react to 16.8 & MUI to 4.2

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -16,7 +16,9 @@
         box-sizing: border-box;
         font-family: "Open Sans", sans-serif;
       }
-
+      .pearsonMuiTheme {
+        margin: 30px auto;
+      }
     </style>
     <!-- jss-insertion-point -->
     <title>Pearson Material UI Theme</title>
